add /races/:id/run API
