# backend/src/models/choice.ts
@@ -1,3 +1,4 @@
+import { TxOutput } from 'ldk';
 import { v4 as uuidv4 } from 'uuid';
 import { Dog } from "./dog";
 
@@ -9,15 +10,17 @@ export interface Choice {
     txid: string;
     vout: number;
   };
+  parity: number;
   createdAt: string;
 }
 
-export function createChoice(payout:string, dog:Dog, outpoint:{txid:string, vout:number}): Choice {
+export function createChoice(payout:string, dog:Dog, outpoint:{txid:string, vout:number}, parity: number): Choice {
   return {
     id: uuidv4(),
     payout,
     dog,
     outpoint,
+    parity,
     createdAt: new Date().toUTCString(),
   }
 }
